--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header class="header">
         <div class="header-image" id="header">
-            <img src="../Assignment_2/Assets/01main-bg.jpg" alt="header background">
+            <img src="./Assets/01main-bg.jpg" alt="header background">
         </div>
         <div class="position-absolute top-50 start-50 translate-middle text-center text-white custom-text">
             <h1 class="display-3 mt-n5">PLAY TRADITIONAL GAME</h1>
@@ -44,7 +44,7 @@
     <!-- section 1 -->
     <section class="section-1">
         <div class="background-section">
-            <img src="../Assignment_2/Assets/02bg-the-games-bg.jpg" alt="background-section-1">
+            <img src="./Assets/02bg-the-games-bg.jpg" alt="background-section-1">
         </div>
         <div id="carouselSlider" class="carousel slide">
             <div class="carousel-indicators">
@@ -54,13 +54,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../Assignment_2/Assets/02carousel-rockpaperstrategy-1600.jpg" class="d-block w-100" alt="carousel1">
+                    <img src="./Assets/02carousel-rockpaperstrategy-1600.jpg" class="d-block w-100" alt="carousel1">
                 </div>
                 <div class="carousel-item">
-                    <img src="../Assignment_2/Assets/02carousel-rockpaperstrategy-1600.jpg" class="d-block w-100" alt="carousel2">
+                    <img src="./Assets/02carousel-rockpaperstrategy-1600.jpg" class="d-block w-100" alt="carousel2">
                 </div>
                 <div class="carousel-item">
-                    <img src="../Assignment_2/Assets/02carousel-rockpaperstrategy-1600.jpg" class="d-block w-100" alt="carousel3">
+                    <img src="./Assets/02carousel-rockpaperstrategy-1600.jpg" class="d-block w-100" alt="carousel3">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -82,7 +82,7 @@
     <!-- section 2 -->
     <section class="section-2">
         <div class="background-section">
-            <img src="../Assignment_2/Assets/03Group.webp" alt="background-section-2">
+            <img src="./Assets/03Group.webp" alt="background-section-2">
         </div>
         <div class="text-section-2">
             <p>What's so special?</p>
@@ -125,7 +125,7 @@
     <!-- section 3 -->
     <section class="section-3">
         <div class="background-section">
-            <img src="../Assignment_2/Assets/04-requirements.png" alt="background-section-3">
+            <img src="./Assets/04-requirements.png" alt="background-section-3">
         </div>
         <div class="paragraf-section-3">
             <p>Can My Computer Run this game?</p>
@@ -173,7 +173,7 @@
     <!-- section 4 -->
     <section class="section-4">
         <div class="background-section">
-            <img src="../Assignment_2/Assets/05quotes.png" alt="background-section-4">
+            <img src="./Assets/05quotes.png" alt="background-section-4">
         </div>
         <div class="intro-section-4">
             <h3 class="intro-section-desc">TOP SCORES</h3>
@@ -181,7 +181,7 @@
             <button>see more</button>
         </div>
             <div class="testi-1">
-                <img src="../Assignment_2/Assets/testi-1.png" alt="testi-1">
+                <img src="./Assets/testi-1.png" alt="testi-1">
                 <div class="text-container">
                     <h6>Evan Lahti</h6>
                     <p>PC Gamer</p>
@@ -191,7 +191,7 @@
                 <div class="twitter-icon"></div>
             </div>  
             <div class="testi-2">
-                <img src="../Assignment_2/Assets/testi-2.png" alt="testi-2">
+                <img src="./Assets/testi-2.png" alt="testi-2">
                 <div class="text-container">
                     <h6>Jada Griffin</h6>
                     <p>Nerdreactor</p>
@@ -201,7 +201,7 @@
                 <div class="twitter-icon"></div>
             </div>
             <div class="testi-3">
-                <img src="../Assignment_2/Assets/testi-3.png" alt="testi-3">
+                <img src="./Assets/testi-3.png" alt="testi-3">
                 <div class="text-container">
                     <h6>Aaron Williams</h6>
                     <p>Uproxx</p>
@@ -216,7 +216,7 @@
     <!-- section 5 -->
     <section>
         <div class="background-section">
-            <img src="../Assignment_2/Assets/06newsletter.png" alt="background-section-5">
+            <img src="./Assets/06newsletter.png" alt="background-section-5">
         </div>
         <div class="paragraf-1-section-5">
             <p>Want to stay in touch?</p>
@@ -241,10 +241,10 @@
             <p>QUOTES</p>
         </div>
         <div class="icon-sosmed">
-            <img src="../Assignment_2/Assets/icon-facebook.svg" alt="icon-facebook">
-            <img src="../Assignment_2/Assets/icon-twitter.svg" alt="icon-twitter">
-            <img src="../Assignment_2/Assets/icon-youtube.svg" alt="icon-youtube">
-            <img src="../Assignment_2/Assets/icon-chat.svg" alt="icon-chat">
+            <img src="./Assets/icon-facebook.svg" alt="icon-facebook">
+            <img src="./Assets/icon-twitter.svg" alt="icon-twitter">
+            <img src="./Assets/icon-youtube.svg" alt="icon-youtube">
+            <img src="./Assets/icon-chat.svg" alt="icon-chat">
         </div>
         <div class="copyright">
             <p class="paragraf-copyright-1">&#169; 2018 Your Games, Inc. All Rights Reserved</p>
